# zero

./: .env.testing-artifacts  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  DELTA.md  MAINTENANCE.md  Makefile.toml  README.md  SUBTREES.md  zainod-heights-from-validator-spec.md
.claude/skills/update-subtree/: SKILL.md
.claude/skills/upstream-change/: SKILL.md
.github/: mergify.yml
.github/ISSUE_TEMPLATE/: release.md
.github/actions/setup-zebra-build/: action.yml
.github/workflows/: auto-tag-rc.yml  cancel-closed-queue-runs.yml  caution-z3-reproduce.yml  caution-z3.yml  caution-zaino.yml  checkpoint-update.yml  compute-tag.yml  final-tag-on-stable.yml  images.yml  lint.yml  pr-gate.yml  release-binaries.yml  release.yml  tests-unit.yml  z3-regtest.yml  z3-smoke.yml  zfnd-build-docker-image.yml  zfnd-deploy-nodes-gcp.yml
book/src/: SUMMARY.md
book/src/dev/: release-process.md
book/src/user/: install.md  lightwalletd.md  zcashd-compat.md
common/: darkside.go  darkside_test.go
deploy/caution-zaino/: README.md  REHEARSAL.md  SEEDING.md  assemble.sh
deploy/z3-stack/: .env.example  README.md  docker-compose.build.yml  docker-compose.yml  smoke.sh  zainod.toml  zallet.toml  zebrad.toml
deploy/zcashd-behind-zebra/: README.md  docker-compose.yml  zcash.conf  zebrad.toml
docker/: Dockerfile
docker/zcashd/: Dockerfile  Dockerfile.dockerignore
docs/: internal_spec.md
docs/adr/: 0003-live-test-taxonomy-and-two-crate-split.md  0004-rename-integration-partition-to-clientless.md  0006-aws-lc-rs-preferred-crypto-provider.md
docs/notes/: ironwood-activation-plan.md
librustzcash/: README.md
lightwalletd/: README.md
live-tests/: CONTEXT.md
live-tests/clientless/: Cargo.toml
live-tests/clientless/src/: lib.rs
live-tests/clientless/tests/: compact_block_consistency.rs  state_service.rs  validator_heights.rs
live-tests/e2e/: Cargo.toml
live-tests/e2e/src/: devtool.rs
live-tests/e2e/tests/: compact_block_wire.rs  test_vectors.rs
live-tests/test_environment/: Containerfile
live-tests/zaino-testutils/: Cargo.toml
live-tests/zaino-testutils/src/: lib.rs
orchard/: README.md
qa/regtest-harness/: README.md  run-parallel.sh  run.sh
qa/zebra-differential/: Cargo.toml  README.md
qa/zebra-differential/src/: main.rs
qa/zebra-differential/testdata/: ironwood-mainnet-review-2026-07-17.json
tools/scripts/: container-nextest-workspace.sh  functions.sh  help.sh  validate-makefile-tasks.rs
tools/workbench/: Cargo.toml
tools/workbench/src/: lib.rs
tower-batch-control/: Cargo.toml
tower-fallback/: CHANGELOG.md  Cargo.toml
tower-fallback/src/: future.rs  lib.rs
zaino/: .dockerignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  Dockerfile  Dockerfile.deterministic  Makefile.toml  README.md
zaino/.cargo/: config.toml
zaino/.config/: nextest.toml
zaino/.github/workflows/: build-n-push-ci-image.yaml  ci-nightly.yaml  ci.yml  publish-dry-run.yml  release.yaml  shellcheck.yaml
zaino/docs/: docker.md  logging.md  testing.md  updating_zebra_crates.md
zaino/docs/adr/: 0001-zcashd-support-feature-gate.md  0002-live-tests-rejoin-root-workspace.md  0004-rename-integration-partition-to-clientless.md  0005-zcashd-support-default-off.md
zaino/docs/example_configs/: zainod.toml
zaino/docs/notes/: pool-indexed-dispatch.md
zaino/live-tests/: CONTEXT.md
zaino/live-tests/clientless/src/: lib.rs
zaino/live-tests/clientless/tests/: chain_cache.rs  compact_block_consistency.rs  fetch_service.rs  json_server.rs  state_service.rs  testnet_ironwood_boundary.rs
zaino/live-tests/e2e/: Cargo.toml
zaino/live-tests/e2e/src/: devtool.rs  lib.rs
zaino/live-tests/e2e/tests/: compact_block_wire.rs  devtool.rs  devtool_zcashd.rs  ironwood_activation.rs  test_vectors.rs
zaino/live-tests/test_environment/: entrypoint.sh
zaino/live-tests/zaino-testutils/: Cargo.toml
zaino/live-tests/zaino-testutils/src/: lib.rs
zaino/tools/makefiles/: lints.toml
zaino/tools/scripts/: base-script-pre.sh  build-image.sh  check-zaino-proto-heavy.rs  help.sh  init-podman-volumes.sh  update-test-targets.sh  validate-test-targets.sh  verify-all.sh
zaino/tools/test-runner/: Cargo.toml
zallet/: Cargo.toml  Dockerfile  README.md
zcashd/: .gitignore  Cargo.toml  SECURITY.md  configure.ac
zcashd/.cargo/: config.toml.offline
zcashd/depends/: Makefile
zcashd/doc/: release-notes.md
zcashd/src/: Makefile.am  bitcoind.cpp  chain.h  chainparams.cpp  chainparams.h  clientversion.h  coins.cpp  coins.h  core_memusage.h  dbwrapper.h  deprecation.h  experimental_features.cpp  experimental_features.h  init.cpp  main.cpp  main.h  miner.cpp  miner.h  transaction_builder.cpp  transaction_builder.h  txdb.cpp  txdb.h  txmempool.cpp  txmempool.h  version.h  zcbenchmarks.cpp
zebra/: .dockerignore  .lychee.toml  .release-plz.toml  CHANGELOG.md  Cargo.toml  Makefile  SECURITY.md  deny.toml
zebra-chain/: CHANGELOG.md  Cargo.toml
zebra-chain/src/: transaction.rs
zebra-consensus/: Cargo.toml
zebra-consensus/src/: script.rs  transaction.rs
zebra-network/: CHANGELOG.md  Cargo.toml
zebra-node-services/: CHANGELOG.md  Cargo.toml
zebra-rpc/: CHANGELOG.md  Cargo.toml
zebra-script/: CHANGELOG.md  Cargo.toml
zebra-script/src/: lib.rs
zebra-state/: CHANGELOG.md  Cargo.toml
zebra-state/src/: lib.rs
zebra/.config/: nextest.toml
zebra/.github/: mergify.yml  path-filters.yml
zebra/docker/: Dockerfile  entrypoint.sh
zebra/make/: zcashd-compat.mk
zebra/scripts/: install-zebra.sh
zebra/supply-chain/: audits.toml  config.toml
zebra/tower-batch-control/: CHANGELOG.md  Cargo.toml
zebra/zebra-chain/: CHANGELOG.md  Cargo.toml
zebra/zebra-consensus/: CHANGELOG.md  Cargo.toml
zebra/zebra-network/: CHANGELOG.md  Cargo.toml
zebra/zebra-node-services/: CHANGELOG.md
zebra/zebra-rpc/: CHANGELOG.md  Cargo.toml
zebra/zebra-script/: CHANGELOG.md
zebra/zebra-state/: CHANGELOG.md  Cargo.toml
zebra/zebra-utils/: CHANGELOG.md  Cargo.toml
zebra/zebrad/: Cargo.toml
zebrad/: Cargo.toml  zcashd-compat-manifest.json
zebrad/src/: components.rs
(+193 files in other folders)
