# Workspace Members are in dependency order, do not change this without prior consideration.
[workspace]
members = [
    "packages/zaino-common",
    "packages/zainod",
    "packages/zaino-serve",
    "packages/zaino-state",
    "packages/zaino-fetch",
    "packages/zaino-proto",
    # Live-test suite (docs/adr/0002, docs/adr/0003, docs/adr/0004).
    # zaino-testutils first: the e2e/clientless partitions depend on it.
    "live-tests/zaino-testutils",
    "live-tests/clientless",
    "live-tests/e2e",
]
# `container-test` runs a bare `cargo nextest run`, which operates on
# default-members — so the heavy live-test crates are built and tested only
# when selected explicitly (`-p e2e` / `-p clientless`). See docs/adr/0002.
default-members = [
    "packages/zaino-common",
    "packages/zainod",
    "packages/zaino-serve",
    "packages/zaino-state",
    "packages/zaino-fetch",
    "packages/zaino-proto",
]

# Use the edition 2021 dependency resolver in the workspace, to match the crates
resolver = "2"

[workspace.package]
authors = ["Zingo Lab Cyan"]
repository = "https://github.com/zingolabs"
homepage = "https://www.zingolabs.org/"
edition = "2021"
license = "Apache-2.0"


[workspace.dependencies]

# Librustzcash
incrementalmerkletree = "0.8"
zcash_address = "0.13.0-pre.0"
zcash_keys = "0.15.0-pre.0"
zcash_protocol = "0.10.0-pre.0"
zcash_primitives = "0.29.0-pre.0"
zcash_transparent = "0.9.0-pre.0"
zcash_client_backend = "0.24.0-pre.0"

# Zebra
zebra-chain = "11.0"
zebra-state = "10.0"
zebra-rpc = "11.0"

# Runtime
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# CLI
clap = "4.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = [
    "fmt",
    "env-filter",
    "time",
    "json",
] }
tracing-tree = "0.4"
nu-ansi-term = "0.50"
time = { version = "0.3", features = ["macros", "formatting"] }

# Network / RPC
http = "1.1"
url = "2.5"
reqwest = { version = "0.13", default-features = false, features = [
    "cookies",
    "rustls-no-provider",
    "webpki-roots",
] }
tower = { version = "0.4", features = ["buffer", "util"] }
tonic = { version = "0.14" }
prost = "0.14"
serde = "1.0"
serde_json = "1.0"
jsonrpsee-types = "0.24"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }

# Hashmaps, channels, DBs
indexmap = "2.2.6"
dashmap = "6.1"
lmdb = "0.8"
lmdb-sys = "0.8"
futures = "0.3.30"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }

# Utility
thiserror = "2.0"
once_cell = "1.20"
chrono = "0.4"
which = "8"
whoami = "2.1"
corez = "0.1"

# Formats
base64 = "0.22"
byteorder = "1.5"
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"
toml = "1.1"
primitive-types = "0.14"
bs58 = "0.5"
bitflags = "2.9"

# Test
tempfile = "3.2"
# `zcashd_support` is opt-in, not a default (docs/adr/0005), so these path deps
# no longer need `default-features = false` to drop it: their default feature
# set is already empty. Enable zcashd end-to-end with `--features zcashd_support`.
zainod = { path = "packages/zainod" }
zaino-common = { path = "packages/zaino-common", version = "0.3.0-rc.1" }
# default-features = false so the default-on `zcashd_support` feature can be
# dropped end-to-end via `--no-default-features`; each consumer re-enables it
# by forwarding `zcashd_support` in its own `default`. See
# docs/adr/0001-zcashd-support-feature-gate.md.
zaino-fetch = { path = "packages/zaino-fetch", version = "0.3.0-rc.1", default-features = false }
zaino-proto = { path = "packages/zaino-proto", version = "0.2.0-rc.1" }
zaino-state = { path = "packages/zaino-state", version = "0.4.0-rc.1", default-features = false }
zaino-serve = { path = "packages/zaino-serve", version = "0.4.0-rc.1", default-features = false }
zaino-testutils = { path = "live-tests/zaino-testutils" }

# Zingo-infra (validator launcher driving the live tests; not a prod dep).
# Pinned to an exact commit past zcash_local_net_v0.7.0: the v0.7.0 launcher's
# zebrad config writer silently drops NU6.3 activation heights
# (https://github.com/zingolabs/zaino/issues/1368). The pin also carries the
# Validator-as-sole-heights-truth enforcement (infrastructure ADR 0003,
# PR #278; wallet clients derive their heights via
# `WalletNetwork::from_validator`, and `ZainodConfig` carries a payload-free
# network kind), the Wallet abstraction (the `client` module renamed to
# `wallet`, infrastructure PR #280), deterministic listener-port allocation,
# and the Indexer-convergence barrier. Restore a release tag once one is cut
# upstream.
zcash_local_net = { git = "https://github.com/zingolabs/infrastructure.git", rev = "f6a2af51e4eb65cfa5d1443f8ea00f6b9f55bf05" }

wire_serialized_transaction_test_data = "1.0.0"
config = { version = "0.15", default-features = false, features = ["toml"] }
nonempty = "0.12.0"
proptest = "~1.11"
zip32 = "0.2.1"
anyhow = "1.0"
arc-swap = "1.7.1"
derive_more = "2.0.1"

[profile.test]
opt-level = 3
debug = true

[patch.crates-io]
