[package]
name = "clientless"
description = "Clientless live tests: exercise Zaino's service layer directly against a live validator (no wallet client)."
publish = false

authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
version = "0.2.0"

[features]
default = []

# Support for the zcashd test validator. Opt-in (default off, docs/adr/0005); being deprecated. Gates
# the zcashd-backed tests and forwards to zaino-testutils. See
# docs/adr/0001-zcashd-support-feature-gate.md.
zcashd_support = ["zaino-testutils/zcashd_support"]

# **Experimental and alpha features**
# Exposes the **complete** set of experimental / alpha features currently implemented in Zaino.
experimental_features = ["transparent_address_history_experimental"]

# Activates transparent address history capability in zaino
#
# NOTE: currently this is only implemented in the finalised state.
transparent_address_history_experimental = [
    "zaino-state/transparent_address_history_experimental",
    "zainod/transparent_address_history_experimental",
    "zaino-testutils/transparent_address_history_experimental",
]

[dependencies]
zaino-fetch = { workspace = true }
zaino-testutils = { workspace = true }
# The lib's z_validate helper calls `ZcashIndexer::z_validate_address`.
zaino-state = { workspace = true, features = ["test_dependencies"] }
tracing.workspace = true

[dev-dependencies]
anyhow = { workspace = true }
# Enable the tractable seam depth (fast-test-seam) so the chain_cache tests exercise
# finalisation/eviction at small chain heights. Dev-dependency only — the feature
# must never reach a shipped build (see the zaino-state feature comment).
zaino-state = { workspace = true, features = ["fast-test-seam"] }

# Test utility
zainod = { workspace = true }
zaino-testutils = { workspace = true }
zaino-fetch = { workspace = true }
zaino-proto = { workspace = true }
zaino-common = { workspace = true }
wire_serialized_transaction_test_data = { workspace = true }
zebra-chain = { workspace = true }
zebra-state = { workspace = true }
zebra-rpc = { workspace = true }
zip32 = { workspace = true }

corez = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
hex = { workspace = true }

# Runtime
tokio = { workspace = true }

# Zingo-infra
zcash_local_net = { workspace = true }
