[package]
name = "zaino-testutils"
description = "Crate containing Zaino test specific functionality."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = "0.2.0"
publish = false

[features]
default = []

# Support for the zcashd test validator. Opt-in (default off, docs/adr/0005); being deprecated. Gates
# the zcashd-specific test infra (ValidatorKind::Zcashd, the Zcashd validator
# launchers, ZcashdDualFetchServices, the zcashd smoke-test module) and
# forwards to the zaino libs. See
# docs/adr/0001-zcashd-support-feature-gate.md.
zcashd_support = [
    "zaino-fetch/zcashd_support",
    "zaino-state/zcashd_support",
    "zaino-serve/zcashd_support",
    "zainod/zcashd_support",
]

# **Experimental and alpha features**
# Exposes the **complete** set of experimental / alpha features currently implemented in Zaino.
experimental_features = ["transparent_address_history_experimental"]

# Activates transparent address history capability in zaino
#
# NOTE: currently this is only implemented in the finalised state.
transparent_address_history_experimental = [
    "zaino-state/transparent_address_history_experimental",
    "zaino-serve/transparent_address_history_experimental",
    "zainod/transparent_address_history_experimental"
]

[dependencies]
# Zaino
zaino-state = { workspace = true }
zaino-serve.workspace = true
zaino-common.workspace = true
zaino-proto = { workspace = true }
zaino-fetch = { workspace = true }
# test_dependencies enables Indexer::launch_inner_with_listeners (and forwards
# zaino-serve/test_dependencies) so the harness can serve on pre-bound sockets.
zainod = { workspace = true, features = ["test_dependencies"] }

# Librustzcash. local-consensus is test-only (regtest params); kept off the
# root workspace entry so prod resolution is unchanged.
zcash_protocol = { workspace = true, features = ["local-consensus"] }

# Zebra
zebra-chain = { workspace = true }
zebra-state = { workspace = true }
zebra-rpc = { workspace = true }

# Zingo-infra
zcash_local_net = { workspace = true }

# Miscellaneous
futures = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
tonic.workspace = true
tracing.workspace = true
